<resources>
    <string name="tab_weixin">设备</string>
    <string name="tab_contact">名单管理</string>
    <string name="tab_find">采号</string>
    <string name="tab_me">设置</string>
    <string name="tab_location">定位</string>
    <string name="tab_history_and_export">历史数据查询及导出</string>
    <string name="tab_stop_signal_switch">是否开启管控</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="lab_name">姓名：</string>
    <string name="lab_imsi">IMSI：</string>
    <string name="lab_msisdn">手机号：</string>
    <string name="save">保 存</string>
    <string name="btn_import">导 入</string>
    <string name="user_add">添 加</string>
    <string name="cancel">取 消</string>
    <string name="close">关 闭</string>
    <string name="delete">删除</string>
    <string name="clear_history">清除侦码历史数据</string>
    <string name="user_manege">用户管理</string>
    <string name="white_list_manage">白名单管理</string>
    <string name="user_black_box">黑匣子</string>
    <string name="imsi_conver_setting">号码翻译设置</string>
    <string name="sound_option">语音播报选项</string>
    <string name="not_support_sound">本机不支持语音播报</string>
    <string name="lab_device_ip">设备IP：</string>
    <string name="device_param">设备参数</string>
    <string name="custom_fcn">自定义频点</string>
    <string name="lab_port">端口：</string>
    <string name="lab_local_ip">本机IP：</string>
    <string name="set_ip">设置IP</string>
    <string name="start_conn">开始</string>
    <string name="disconnect">停止</string>
    <string name="refresh_wifi">刷新WIFI</string>
    <string name="wifi_not_connect">wifi未连接(点击设置)</string>
    <string name="wifi_error">WIFI异常</string>
    <string name="wifi_setting">Wifi设置</string>
    <string name="lab_device">设备：</string>
    <string name="lab_wifi">WIFI：</string>
    <string name="freq">频点</string>
    <string name="connected">已连接</string>
    <string name="device_ready">设备就绪</string>
    <string name="geting">正在获取...</string>
    <string name="device_not_conn">设备未连接</string>
    <string name="device_not_ready">设备未就绪</string>
    <string name="lab_fcn_power">射频</string>
    <string name="rf_control">射频控制</string>
    <string name="power_control">功率档位:</string>
    <string name="detect_carrier_operate">侦码制式:</string>
    <string name="state_unknow">状态未知</string>
    <string name="open_all_rf">射频全开</string>
    <string name="all_rf_open">射频全部开启</string>
    <string name="close_all_rf">射频全关</string>
    <string name="all_rf_close">射频全部关闭</string>
    <string name="all_rf_switch">射频总开关：</string>
    <string name="rf_channel">射频通道：</string>
    <string name="power_set">功率设置</string>
    <string name="target_manage">目标管理</string>
    <string name="tip_01">点击可以切换定位目标，左滑可以删除目标</string>
    <string name="tip_02">曲线越高表示距离越近</string>
    <string name="tip_03">列表中还没有添加目标</string>
    <string name="tip_04">请先停止当前定位再切换目标！</string>
    <string name="tip_05">确定要清除定位目标列表吗？清除后需求重新添加目标！</string>
    <string name="tip_06">请先停止当前定位再清除目标！</string>
    <string name="tip_07">确定退出程序?退出后将无法正常工作</string>
    <string name="tip_08">当前手机不支持中文播报！</string>
    <string name="tip_09">IMSI 长度不对！</string>
    <string name="tip_10">WIFI网络已掉线！设备断开连接！</string>
    <string name="tip_11">功率只能取值:-89 ~ 0</string>
    <string name="tip_12">增益只能取值:0 ~ 40</string>
    <string name="tip_13">Band 只能是39、40</string>
    <string name="tip_14">参数未获取</string>
    <string name="tip_15">设置请求已发送！</string>
    <string name="tip_16">参数输入有误！请检查</string>
    <string name="tip_17">已存在相同的黑名单</string>
    <string name="exist_whitelist">已存在相同的白名单</string>
    <string name="same_user">已存在此账户，请确认再输入</string>
    <string name="same_imsi">已存在此IMSI，请确认再输入</string>
    <string name="set_cell_reboot">成功下发小区配置，请等待设备重启</string>
    <string name="lable_reboot">重启设备</string>
    <string name="set_cell_fail">设置小区配置失败</string>
    <string name="lable_set_cell">小区配置</string>
    <string name="lable_set_channel">通道配置</string>
    <string name="lable_refresh_param">刷新参数</string>
    <string name="clear_loc_target">清除定位目标</string>
    <string name="lab_keyword">关键字：</string>
    <string name="lab_start_time">开始时间：</string>
    <string name="lab_end_time">结束时间：</string>
    <string name="search">搜索</string>
    <string name="export_search_res">导出搜索结果</string>
    <string name="lab_loc_user">目标：</string>
    <string name="loc_not_start">搜寻未开始</string>
    <string name="play">{ty_media_play} 播音</string>
    <string name="clear_namelist">清除名单</string>
    <string name="signal_val">RSRP：%1$d dbm</string>
    <string name="signal_default_val">信号：0 dbm</string>
    <string name="signal_unit">信号：0 dbm</string>
    <string name="field_strength">SRSP：%1$d dbx</string>
    <string name="field_default_strength">场强：0 dbm</string>
    <string name="lab_distance">距离(进度条越满表示距离越近)：</string>
    <string name="far">远</string>
    <string name="near">近</string>
    <string name="add">添加</string>
    <string name="lab_opt_rf">操作功放：</string>
    <string name="lab_power">功率：</string>
    <string name="lab_gain">增益：</string>
    <string name="lab_cell_freq">小区频点：</string>
    <string name="lab_freq">小区频点：</string>
    <string name="lab_rpt_time">上报时间：</string>
    <string name="ueid_last_rpt_time">时间：</string>
    <string name="ueid_last_intensity">场强：</string>
    <string name="search_not_found">未搜索到对应的数据</string>
    <string name="can_not_export_search">未搜索到数据，无法导出</string>
    <string name="set_now">立即设置</string>
    <string name="lab_list_number">列表数量：</string>
    <string name="real_time_namelist_number">中标数量：</string>
    <string name="clear_realtime_ueid">清空实时数据</string>
    <string name="clear_realtime_namelist">清空中标</string>
    <string name="lab_local_imsi">本机IMSI：</string>
    <string name="lab_local_imei">本机IMEI：</string>
    <string name="sound_support">语音播报：支持</string>
    <string name="no_sim_card">未插卡</string>
    <string name="no">无</string>
    <string name="clear_success">清除成功</string>
    <string name="failed">失败了</string>
    <string name="del_history_error">删除历史数据出错！</string>
    <string name="rf_close">设置已下发，请等待所有通道射频关闭</string>
    <string name="rf_open">设置已下发，请等待所有通道射频开启</string>
    <string name="error">错误</string>
    <string name="sys_not_start">系统还未启动，请稍后再试</string>
    <string name="rf_state_unknow">射频状态未知，请确定设备是否连接正常!</string>
    <string name="tip">提示</string>
    <string name="sure">确 定</string>
    <string name="authenticate">认证</string>
    <string name="tip_no_set_black">还未设置黑名单，当前无法捕获目标，是否只开启射频？</string>
    <string name="server_has_stop">服务已停止!</string>
    <string name="start_success">服务启动成功，等待设备连接!</string>
    <string name="restart_success">服务启动成功!</string>
    <string name="start_fail">启动失败</string>
    <string name="rf_state_open">射频状态：全部开启</string>
    <string name="rf_state_close">射频状态：全部关闭</string>
    <string name="stop_loc">停止搜寻</string>
    <string name="stop_loc_err">停止搜寻出错</string>
    <string name="unmute">播音</string>
    <string name="mute">静音</string>
    <string name="negative">负</string>
    <string name="user_has_conn">[用户已接入]</string>
    <string name="exit_app">退出程序！</string>
    <string name="target_found">发现目标</string>
    <string name="del_namelist_fail">删除黑名单失败</string>
    <string name="lab_create_date">创建时间：</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="param_conf">参数配置</string>
    <string name="change_tac">更新TAC</string>
    <string name="add_success">添加成功</string>
    <string name="add_user_success">添加用户成功！</string>
    <string name="modify_user_fail">修改用户失败！</string>
    <string name="modify_whitelist_fail">修改白名单失败！</string>
    <string name="modify_namelist_fail">修改名单失败！</string>
    <string name="modify_user_success">修改用户成功！</string>
    <string name="modify_user_fail_ftp">修改用户失败,请确保与设备网络畅通</string>
    <string name="modify_namelist_success">修改名单成功！</string>
    <string name="modify_admin_success">修改管理员账户成功，下次登录即生效</string>
    <string name="modify_admin_fail_ftp">修改管理员账户失败,请确保与设备网络畅通</string>
    <string name="modify_admin_fail">修改账户失败</string>
    <string name="title_modify_user_info">用户信息修改</string>
    <string name="title_modify_admin_account">管理员信息修改</string>
    <string name="add_namelist_success">添加名单成功！</string>
    <string name="title_modify_namelist">修改名单信息</string>
    <string name="del_user_fail">删除用户失败！</string>
    <string name="del_user_fail_ftp_error">删除用户失败，请检查网络！</string>
    <string name="del_white_list_fail">删除白名单失败！</string>
    <string name="add_black_fail">添加黑名单失败</string>
    <string name="add_user_fail">添加用户失败</string>
    <string name="add_whitelist_fail">添加白名单失败</string>
    <string name="add_user_fail_ftp">添加用户失败,请检查网络</string>
    <string name="sys_time_error">当前系统时间异常</string>
    <string name="low_power">电池电量过低</string>
    <string name="sys_time_error_warm">为保证侦码时间信息准确，请务必设置并确认当前系统时间！</string>
    <string name="low_power_warning">当前电池电量过低，已无法保证正常工作，请及时更换电池！</string>
    <string name="time_point">时间点：</string>
    <string name="start_scan_freq">开始搜网</string>
    <string name="set_selected_fcn">设置开机扫描频点</string>
    <string name="button_loc_unstart">请从列表中选择要监控的名单</string>
    <string name="hw_version">硬件版本：</string>
    <string name="sw_version">软件版本：</string>
    <string name="expired">许可证到期：</string>
    <string name="product_num">产品型号：</string>
    <string name="authorize_code">授权码：</string>
    <string name="machine_id">机器码：</string>
    <string name="due_time">到期时间：</string>
    <string name="authorize_info">授权信息</string>
    <string name="authorize">授 权</string>
    <string name="add_user">添加普通用户</string>
    <string name="add_whitelist">添加白名单</string>
    <string name="clear_whitelist">清空白名单</string>
    <string name="modify_whitelist">修改白名单</string>
    <string name="import_whitelist">导入白名单</string>
    <string name="export_whitelist">导出白名单</string>
    <string name="modify_admin">修改当前账户</string>
    <string name="user_num">序号</string>
    <string name="account">账号</string>
    <string name="account2">账号：</string>
    <string name="password">密码：</string>
    <string name="user_remake">备注</string>
    <string name="user_remake2">备注：</string>
    <string name="user_operation">操作</string>
    <string name="server_address">服务器地址：</string>
    <string name="rest_convert_times">剩余翻译次数：</string>
    <string name="tip_start_listener_fail">监听端口失败</string>
    <string name="tip_start_listener_success">启动成功</string>
    <string name="button_loc_start">开始搜寻</string>
    <string name="button_device_no_conn">设备未连接</string>
    <string name="loc_switch_on">播音</string>
    <string name="loc_switch_off">静音</string>
    <string name="account_rule">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="fcn_rule">0123456789,</string>
    <string name="number_rule">0123456789</string>
    <string name="pa_rule">-0123456789,</string>
    <string name="ip_rule">0123456789.</string>
    <string name="upload_ueid">同步数据到服务器</string>
    <string name="upload_now">立即上传</string>
    <string name="upload_url_lab">上传地址：</string>
    <string name="tip_no_upload_data">没有需要上传的数据！</string>
    <string name="tip_please_input_name">请输入一个名称</string>
    <string name="tip_please_input_right_url">请输入一个正确的地址</string>
    <string name="upload_success">上传成功，共上传：%1$d条</string>
    <string name="upload_fail">上传失败了！</string>
    <string name="export_to_sdcard">导出所有数据到手机</string>
</resources>