<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="16dp"
    android:paddingBottom="22dp"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/title_modify_admin_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/account2" />

        <EditText
            android:id="@+id/etAccount"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:digits="@string/account_rule" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:digits="@string/account_rule"
      />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSave"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btCancel"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_marginStart="18dp"
            android:layout_width="88dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>