<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="22dp"
    android:paddingBottom="22dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/account2" />

        <EditText
            android:id="@+id/etImsi"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:digits="@string/account_rule"
            android:maxLines = "1"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/dialog_edit"
            android:digits="@string/account_rule"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:maxLines = "1"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/user_remake2" />

        <EditText
            android:id="@+id/etRemark"
            style="@style/dialog_edit"
            android:textCursorDrawable="@null"
            android:maxLines = "1"  />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAddUser"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/comman_button_bkg"
            android:layout_width="88dp"
            android:text="@string/user_add" />

        <Button
            android:id="@+id/btCancel"
            android:textColor="@color/darkorange"
            android:background="@drawable/comman_button_bkg"
            android:layout_height="36dp"
            android:layout_marginStart="18dp"
            android:layout_width="88dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>