<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="22dp"
    android:paddingBottom="22dp"
    android:paddingStart="26dp"
    android:paddingEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/lab_imsi" />

        <EditText
            android:id="@+id/etIMSI"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:maxLength="15"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/lab_msisdn" />

        <EditText
            android:id="@+id/etMsisdn"
            style="@style/dialog_edit"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:maxLength="11"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dialog_label"
            android:text="@string/user_remake2" />

        <EditText
            android:id="@+id/etRemark"
            style="@style/dialog_edit"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:maxLength="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btWhitelist"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:text="@string/user_add" />

        <Button
            android:id="@+id/btCancel"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_height="36dp"
            android:layout_marginStart="18dp"
            android:layout_width="88dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>