<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="10dp"
    android:paddingBottom="18dp"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="请选择要清除时间段：" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_start_time"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etStartTime"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:digits="@string/account_rule"
            android:focusableInTouchMode="false"
            android:hint="点击选择"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_end_time"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/etEndTime"
            style="@style/dialog_edit"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:focusableInTouchMode="false"
            android:hint="点击选择"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCancel"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btSure"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:layout_marginStart="18dp"
            android:text="@string/sure" />
    </LinearLayout>
</LinearLayout>