<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="26dp"
    android:paddingEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="5dp"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/title_modify_namelist"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/dialog_label"
                android:layout_weight="1"
                android:text="@string/lab_name" />

            <EditText
                android:id="@+id/etName"
                style="@style/dialog_edit"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_marginEnd="15dp"
                android:maxLength="8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/dialog_label"
                android:layout_weight="1"
                android:text="@string/lab_imsi" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/dialog_edit"
                android:layout_weight="1"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="15"
                android:layout_marginEnd="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/dialog_label"
                android:layout_weight="1"
                android:text="@string/user_remake2" />

            <EditText
                android:id="@+id/etRemark"
                style="@style/dialog_edit"
                android:layout_weight="1"
                android:singleLine="true"
                android:layout_marginEnd="15dp"
                android:maxLength="20"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSave"
                android:textColor="@color/darkorange"
                android:background="@drawable/common_button_bkg"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/btCancel"
                android:textColor="@color/darkorange"
                android:background="@drawable/common_button_bkg"
                android:layout_width="88dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>